# Schrodingers-Code

./: .gitignore  CMakeLists.txt
.github/workflows/: build_and_test.yml
app/: CMakeLists.txt
app/src/: main.cpp
lib_examples/: CMakeLists.txt
lib_examples/include/: Example_Task.h  Object.h  Task.h  lib_examples.h  pch.h
lib_examples/src/: Example_Task.cpp  Object.cpp  Task.cpp  Task_Manager.cpp  lib_examples.cpp  pch.h
lib_o/: CMakeLists.txt
lib_o/include/: lib.hpp
lib_o/src/: lib.cpp  pch.h
lib_so/: CMakeLists.txt
lib_so/include/: lib_dynamic.h  lib_dynamic.hpp  pch.h
lib_so/src/: Task.h  Task_Awaiter.cpp  Task_Awaiter.h  Task_Manager.cpp  Task_Manager.h  lib_dynamic.cpp  pch.h
src/: main.cpp
