#-------------------------------------------------------------------------------------------------------------
cmake_minimum_required(VERSION 3.28.3)
#-------------------------------------------------------------------------------------------------------------
project(ASchrodingers_Code VERSION 0.1) # Project name for IDE`s
#-------------------------------------------------------------------------------------------------------------
add_executable(AApplication src/main.cpp)
#-------------------------------------------------------------------------------------------------------------
target_link_libraries(AApplication PRIVATE ALibrary ALibrary_Dynamic) # Link the library to the executable
#-------------------------------------------------------------------------------------------------------------