#-------------------------------------------------------------------------------------------------------------
cmake_minimum_required(VERSION 3.28.3)
#-------------------------------------------------------------------------------------------------------------
project(ASchrodingers_Code VERSION 0.1)  # Project name for IDE`s
#-------------------------------------------------------------------------------------------------------------
add_library(ALibrary STATIC src/lib.cpp)  # Create a static library
#-------------------------------------------------------------------------------------------------------------
target_include_directories(ALibrary PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)  # include directory library
#-------------------------------------------------------------------------------------------------------------
